Fixes content title spacing.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -672,4 +672,7 @@ figure {
     }
 }
 
-
+.main-content h2 {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
